# cppheaders

./: .clang-format  .gitignore  CMakeLists.txt  README.md  __cpph__.inc  __namespace__  __namespace__.h  algorithm.hxx  array_view.hxx  assert.hxx  circular_queue.hxx  cleanup.hxx  counter.hxx  delegate.hxx  dynamic_array.hxx  event.hxx  event_queue.hxx  format.hxx  functional.hxx  futils.hxx  hasher.hxx  macros.hxx  ndarray.hxx  poll_timer.hxx  queue_buffer.hxx  shared_string.hxx  spinlock.hxx  static_vector.hxx  task_queue.hxx  template_utils.hxx  threading.hxx  timer.hxx  tuple_for_each.hxx  tuple_utils.hxx  type_traits.hxx  zip.hxx
algorithm/: base64.hxx  std.hxx
archiving/: __macro_utility.hxx  archive.hxx  helper_macros.hxx  nlohmann_json_helper.hxx  object.hxx  reflection.hxx
container/: bimap.hxx  buffer.hxx  deque.hxx  sorted_vector.hxx
helper/: __macro_utility.hxx  exception.hxx  macro_for_each.hxx  macro_utility.hxx  nlohmann_json_macros.hxx  spdlog_macros.hxx  strutil.hxx
include/cpph/: algorithm.hxx  array_view.hxx  assert.hxx  chrono.hxx  dynamic_array.hxx  event.hxx  futils.hxx  hasher.hxx  macros.hxx  spinlock.hxx  template_utils.hxx  threading.hxx  timer.hxx  type_traits.hxx
include/cpph/algorithm/: base64.hxx  std.hxx
include/cpph/app/: localize.hpp  module.hpp
include/cpph/container/: alloca_fwd_list.hxx  bimap.hxx  buffer.hxx  circular_queue.hxx  convert_table.hxx  deque.hxx  flat_map.hxx  mapped_variant.hxx  mapping.hxx  ndarray.hxx  shared_string.hxx  sorted_vector.hxx  static_vector.hxx  string_cache.hxx
include/cpph/helper/: alias_memory.hxx  exception.hxx  macro_for_each.hxx  macro_utility.hxx  macros.hxx  nlohmann_json_macros.hxx  quick_bench.hxx  rate_counter.hxx  spdlog_macros.hxx  strutil.hxx
include/cpph/math/: camera.hxx  defs.hxx  geometry.hxx  matrix.hxx  plane.hxx  rectangle.hxx
include/cpph/memory/: list_pool.hxx  pool.hxx  queue_allocator.hxx  ring_allocator.hxx
include/cpph/refl/: README.md  core.hxx  fwd.hxx  object.hxx  rpc.hxx
include/cpph/refl/archive/: debug_string_writer.hxx  json-reader.hxx  json-writer.hxx  json.hpp  msgpack-reader.hxx  msgpack-writer.hxx
include/cpph/refl/detail/: _deinit_macros.hxx  _init_macros.hxx  binary_fwd.hxx  if_archive.hxx  (+6 more)
include/cpph/std/: algorithm  array  chrono  filesystem  list  map  memory  mutex  optional  set  shared_mutex  string  string_view  tuple  unordered_map  unordered_set  variant  vector
include/cpph/streambuf/: base64.hxx  circular.hxx  string.hxx  view.hxx
include/cpph/third/: backward.hpp  jsmn.h  stb.hpp
include/cpph/thread/: dispose_guard.hxx  event_queue.hxx  event_wait.hxx  local_async.hxx  locked.hxx  message_procedure.hxx  notify_queue.hxx  pipeline.hxx  reentrant_assert.hxx  spinlock.hxx  thread_pool.hxx  threading.hxx  utility.hxx  worker.hxx
include/cpph/utility/: array_view.hxx  chrono.hxx  cleanup.hxx  counter.hxx  event.hxx  event_registry.hxx  format.hxx  functional.hxx  futils.hxx  generic.hxx  hasher.hxx  inserter.hxx  ownership.hxx  random.hxx  singleton.hxx  template_utils.hxx  templates.hxx  timer.hxx  type_traits.hxx  zip.hxx
marshal/: basic_builder.hxx  bson_serializer.hxx  reflection.hxx
math/: defs.hxx  geometry.hxx  matrix.hxx  rectangle.hxx  types.hxx
memory/: event_queue.hxx  pool.hxx  queue_allocator.hxx  resource_pool.hxx
refl/: README.md  __cpph__.inc  __namespace__  archive.hxx  buffer.hxx  core.hxx  if_archive.hxx  object.hxx  object_core.hxx  object_manip.hxx  refl.hxx  stream_adapters.hxx
refl/archive/: __cpph__.inc  basic_reader.hxx  basic_writer.hxx  binstream.hxx  context_helper.hxx  debug_string_writer.hxx  json-writer.hxx  json.hpp  json.inc  msgpack-reader.hxx  msgpack-writer.hxx  msgpack.hpp  msgpack.hxx  msgpack.inc
refl/archive/detail/: context_helper.hxx  json.inc  json.src.hpp  msgpack.hxx
refl/archivers/: __cpph__.inc
refl/container/: array.hxx  binary.hxx  nlohmann-json.hxx  tuple.hxx  variant.hxx
refl/detail/: _deinit_macros.hxx  _init_macros.hxx  binary_fwd.hxx  containers.hxx  if_archive.hxx  object_core.hxx  object_impl.hxx  object_impl.inc  object_macros.hxx  primitives.hxx  primitives.inc  traits.hxx
refl/extension/: msgpack-rpc.hxx
refl/extension/msgpack-rpc/: asio.hxx  context.hxx  defs.hxx  errors.hxx  request_handle.hxx  service_info.hxx  signature.hxx  stub.hxx
refl/msgpack-rpc/: asio.hxx  context.hxx  defs.hxx  errors.hxx  request_handle.hxx  service_info.hxx  signature.hxx
refl/rpc/: connection.hxx  connection_streambuf_base.hxx  core.hxx  default_event_procedure.hxx  protocol.hxx  rpc.hxx  service.hxx
refl/rpc/connection/: asio.hxx  inmemory_pipe.hxx  sock-tcp.hxx
refl/rpc/detail/: connection.hxx  default_event_procedure.hxx  defs.hxx  errors.hxx  group.hxx  interface.hxx  protocol_procedure.hxx  protocol_stream.hxx  remote_procedure_message_proxy.hxx  request_handle.hxx  server.hxx  service.hxx  service_builder.hxx  service_info.hxx  session.hxx  session_builder.hxx  session_profile.hxx  signature.hxx
refl/rpc/protocol/: msgpack-rpc.hxx
refl/types/: array.hxx  binary.hxx  chrono.hxx  list.hxx  nlohmann-json.hxx  tuple.hxx  variant.hxx
src/: json.cpp  localize.cpp  module.cpp  nlohmann_json.cpp  stb.cpp
src/import/: stb_image_write.h
streambuf/: base64.hxx  circular.hxx  string.hxx  view.hxx
tests/: CMakeLists.txt  catch.hpp  compile-test.cpp  compile.cpp  doctest.cpp  doctest.h  test-algorithm.cpp  test-archive-2.cpp  test-archive.cpp  test-base64.cpp  test-container.cpp  test-event.cpp  test-event_queue.cpp  test-functional.cpp  test-gcccompile.cpp  test-math.cpp  test-message_procedure.cpp  test-msgpack-rpc.cpp  test-msgpack-rpc.py  test-pipe.cpp  test-pipeline.cpp  test-queue.cpp  test-reflect.cpp  test-rpc.cpp  test-streambuf.cpp  test-templates.cpp  test-thread.cpp
third/: backward.hpp  catch.hpp  doctest.h  jsmn.h
thread/: event_wait.hxx  local_async.hxx  locked.hxx  message_procedure.hxx  notify_queue.hxx  pipe.hxx  reentrant_assert.hxx  thread_pool.hxx  utility.hxx  worker.hxx
utility/: cleanup.hxx  inserter.hxx  ownership.hxx  singleton.hxx
(+39 files in other folders)
